# TileMapEditor

./: CMakeLists.txt  README.md  TileMapEditor.cbp  TileMapEditor.layout  requirements.txt
cmake/: EnableProfiling.cmake
doc/: usermanual.odt
lib/wxFlatNotebook/: fnb_customize_dlg.cpp  fnb_resources.cpp  popup_dlg.cpp  renderer.cpp  wxFlatNotebook.cpp  xh_fnb.cpp
lib/wxFlatNotebook/wx/wxFlatNotebook/: fnb_customize_dlg.h  fnb_singleton.h  fnb_smart_ptr.h  popup_dlg.h  renderer.h  wxFNBDropTarget.h  wxFlatNotebook.h  xh_fnb.h
src/data/: AnimatedTile.cpp  AnimatedTile.hpp  Background.cpp  Background.hpp  CollisionLayer.cpp  CollisionLayer.hpp  DrawAttributes.cpp  DrawAttributes.hpp  Layer.cpp  Layer.hpp  Map.cpp  Map.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  PixelBasedCollisionLayer.cpp  PixelBasedCollisionLayer.hpp  Rectangle.cpp  Rectangle.hpp  Region.cpp  Region.hpp  TileBasedCollisionLayer.cpp  TileBasedCollisionLayer.hpp  TiledLayerData.cpp  TiledLayerData.hpp  Tileset.cpp  Tileset.hpp
src/gui/: Clock.cpp  Clock.hpp  GridSizeDialog.cpp  GridSizeDialog.hpp  MapCanvas.cpp  MapCanvas.hpp  MapDocument.cpp  MapDocument.hpp  MapView.cpp  MapView.hpp  MapViewUpdate.cpp  MapViewUpdate.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  TilemapEditorApp.cpp  TilemapEditorApp.hpp  TilemapEditorFrame.cpp  TilemapEditorFrame.hpp  wxScrolledSFMLWindow.cpp  wxScrolledSFMLWindow.hpp
src/handlers/: BaseMapHandler.cpp  BaseMapHandler.hpp  BinaryMapHandler.cpp  BinaryMapHandler.hpp  GBAImageHandler.cpp  GBAImageHandler.hpp  GBAMapHandler.cpp  GBAMapHandler.hpp  HandlerUtils.cpp  HandlerUtils.hpp  Handlers.hpp  ImageMapHandler.cpp  ImageMapHandler.hpp  MapHandlerManager.cpp  MapHandlerManager.hpp  TextMapHandler.cpp  TextMapHandler.hpp  XmlMapHandler.cpp  XmlMapHandler.hpp
src/testing/: AnimatedTileTest.cpp  BasicHandlersTest.cpp  BinaryMapHandlerTest.cpp  ChunkStreamTest.cpp  GlobalTest.cpp  LayerTest.cpp  MapTest.cpp  RegionTest.cpp  TestUtil.cpp  TestUtil.hpp  TextMapHandlerTest.cpp  TiledLayerDataTest.cpp  XmlMapHandlerTest.cpp
src/util/: ChunkStream.cpp  ChunkStream.hpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  ResourceManager.hpp  Scanner.cpp  Scanner.hpp
testdata/: textmaphandlertest.txt
